--- a/app/src/main/res/layout/fragment_cancer.xml
+++ b/app/src/main/res/layout/fragment_cancer.xml
@@ -1,11 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       tools:context=".cancerscreens.CancerFragment">
+       tools:context=".cancerscreens.CancerFragment"
+       android:background="@color/purple">
+
+      <androidx.recyclerview.widget.RecyclerView
+          android:id="@+id/cancer_list"
+          android:layout_width="0dp"
+          android:layout_height="0dp"
+          android:layout_marginBottom="10dp"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toBottomOf="@id/cancer_logo" />
+      <ImageView
+          android:id="@+id/cancer_logo"
+          android:layout_width="0dp"
+          android:layout_height="300dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginTop="30dp"
+          android:layout_marginEnd="8dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:srcCompat="@drawable/logo_png"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
