--- a/app/src/main/res/layout/fragment_cancer.xml
+++ b/app/src/main/res/layout/fragment_cancer.xml
@@ -3,11 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
+   <data>
+      <variable
+          name="cancerViewModel"
+          type="com.example.cancerpedia.cancerscreens.CancerViewModel" />
+   </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".cancerscreens.CancerFragment"
        android:background="@color/purple">
+      <ImageView
+          android:id="@+id/cancer_logo"
+          android:layout_width="0dp"
+          android:layout_height="150dp"
+          android:layout_marginStart="8dp"
+          android:layout_marginTop="30dp"
+          android:layout_marginEnd="8dp"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:srcCompat="@drawable/logo_png"/>
 
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/cancer_list"
@@ -17,18 +33,9 @@
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@id/cancer_logo" />
-      <ImageView
-          android:id="@+id/cancer_logo"
-          android:layout_width="0dp"
-          android:layout_height="300dp"
-          android:layout_marginStart="8dp"
-          android:layout_marginTop="30dp"
-          android:layout_marginEnd="8dp"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-          app:srcCompat="@drawable/logo_png"/>
+          app:layout_constraintTop_toBottomOf="@id/cancer_logo"
+          />
+
    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
