--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,7 @@
     <style name="Theme.Cancerpedia" parent="Base.Theme.Cancerpedia" />
     <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/purple</item>
-        <item name="windowSplashScreenAnimatedIcon">@drawable/logo_png</item>
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/cancer_logo_foreground</item>
         <item name="postSplashScreenTheme">@style/Base.Theme.Cancerpedia</item>
     </style>
     
