--- a/app/src/main/res/layout/fragment_cancer.xml
+++ b/app/src/main/res/layout/fragment_cancer.xml
@@ -8,6 +8,7 @@
           name="cancerViewModel"
           type="com.example.cancerpedia.cancerscreens.CancerViewModel" />
    </data>
+
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
@@ -29,12 +30,13 @@
           android:id="@+id/cancer_list"
           android:layout_width="0dp"
           android:layout_height="0dp"
-          android:layout_marginBottom="10dp"
+          android:padding="12dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toBottomOf="@id/cancer_logo"
-          />
+          app:layout_constraintTop_toBottomOf="@id/cancer_logo">
+
+      </androidx.recyclerview.widget.RecyclerView>
 
    </androidx.constraintlayout.widget.ConstraintLayout>
 
