--- a/app/src/main/res/layout/list_item_cancer_type.xml
+++ b/app/src/main/res/layout/list_item_cancer_type.xml
@@ -7,34 +7,37 @@
             name="cancer"
             type="com.example.cancerpedia.database.Cancer" />
     </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/purple">
+        android:layout_marginBottom="12dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="5dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardUseCompatPadding="true"
+        app:cardBackgroundColor="@color/purple">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:id="@+id/cancerLayout">
         <ImageView
             android:id="@+id/cancer_image"
             android:layout_width="90dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            android:layout_height="90dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="5dp"
             tools:srcCompat="@drawable/cancer"/>
-
         <TextView
             android:id="@+id/cancer_string"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="15dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="19dp"
+            android:layout_below="@id/cancer_image"
             android:text="@string/cancer_text"
             android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@id/cancer_image"
-            app:layout_constraintStart_toStartOf="@id/cancer_image"
-            app:layout_constraintTop_toBottomOf="@id/cancer_image" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:textStyle="bold"/>
+        </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
