--- a/app/src/main/res/layout/fragment_cancer.xml
+++ b/app/src/main/res/layout/fragment_cancer.xml
@@ -3,16 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
-   <data>
-      <variable
-          name="cancerViewModel"
-          type="com.example.cancerpedia.cancerscreens.CancerViewModel" />
-   </data>
-
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       tools:context=".cancerscreens.CancerFragment"
+       tools:context=".cancerscreens.cancerpedia.CancerFragment"
        android:background="@color/purple">
       <ImageView
           android:id="@+id/cancer_logo"
