--- a/app/src/main/res/layout/fragment_reading.xml
+++ b/app/src/main/res/layout/fragment_reading.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".cancerscreens.CancerFragment"
+        tools:context=".cancerscreens.cancerpedia.CancerFragment"
         android:background="@color/purple">
-        <TextView
-            android:id="@+id/readingText"
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-
+            android:layout_centerInParent="true"
+            tools:ignore="UselessParent">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+                <TextView
+                    android:id="@+id/readingText"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="20dp"
+                    android:textAlignment="viewStart"
+                    android:textSize="30sp"
+                    android:textColor="@color/black" />
+           </LinearLayout>
+        </ScrollView>
+    </RelativeLayout>
 </layout>
