--- a/app/src/main/res/layout/fragment_reading.xml
+++ b/app/src/main/res/layout/fragment_reading.xml
@@ -15,14 +15,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-                <TextView
+                <me.biubiubiu.justifytext.library.JustifyTextView
                     android:id="@+id/readingText"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:padding="20dp"
-                    android:textAlignment="viewStart"
-                    android:textSize="30sp"
-                    android:textColor="@color/black" />
+                    android:layout_height="wrap_content"
+                    android:breakStrategy="balanced"
+                    android:fontFamily="sans-serif-light"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="10dp"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                    android:textColor="@color/white"
+                    android:textSize="24sp" />
            </LinearLayout>
         </ScrollView>
     </RelativeLayout>
